# ibex_super_system

./: .gitignore  Makefile  ibex_super_system.core  ibex_super_system_core.core  pulp_riscv_dbg.core  python-requirements.txt  requirements.txt  sourceme.sh  traces.sav
data/: pins_artya7.xdc
lint/: verilator_waiver.vlt
rtl/fpga/: top_artya7.sv
rtl/system/: gpio.sv  ibex_super_system.sv  uart.sv
sim/: Makefile  cocotb_bridge.py  ibex_super_system.cc  ibex_super_system.h  ibex_super_system_main.cc  pytest_ibex_super_system.py  pytest_ibexss.py  run_tests.py  simple_sim.cc  tb_ibex_super_system.py  tb_ibexss_cmdint.py  tb_ibexss_demo.py  testbench.py
sw/: CMakeLists.txt
sw/blank/: CMakeLists.txt
sw/cmdint/: CMakeLists.txt  cmdint.py  main.c  main_nostd.c
sw/cmdint/serial_device/: serial_device.py
sw/common/: CMakeLists.txt  gpio.c  gpio.h  super_system.c  super_system.h  uart.c  uart.h
sw/demo/: CMakeLists.txt  main.c  test.py  uart_hello.py
sw/demo_uart/: CMakeLists.txt  main.c  uart_hello.py
util/: arty-a7-openocd-cfg.tcl
